ARTEMIS-1072: moving java-opts to /etc/artemis.profile